test/shouldPass/vonVolker/test16.pas
program something;
var
    d : double = 10;
    b : double;
    i : integer;
begin
    b :=  42;

end.