test/shouldFail/vonJonas/invalid_identifier02.pas

program InvalidIdentifier02;

var 
  @invalidName : integer;
begin
end.
